--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,16 @@ header {
     background-color: #1abc9c;
 }
 
+.ms_footer-top {
+    background-color: #3a546d;
+}
+
+.ms_footer-bottom {
+    height: 100px;
+    background-color: #2c3e50;
+}
+
+
 
 /* debug */
 
